[project]
name = "SynBPS"
version = "1.0.2"
authors = [
  { name="Mike Riess", email="mike@riess.no" },
]
description = "Synthetic Business Process Simulation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pomegranate==0.14.8",
    "numpy==1.26.2",
    "pandas==2.1.4",
    "scikit-learn>=0.22.2",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mikeriess/synbps"
Issues = "https://github.com/mikeriess/synbps/issues"

