[project]
name = "SynBPS"
version = "1.0.5"
authors = [
  { name="Mike Riess", email="mike@riess.no" },
]
description = "Synthetic Business Process Simulation"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy==1.26.2",
    "pandas==2.1.4",
    "scipy==1.7.0",
    "matplotlib==3.4.2",
    "seaborn==0.11.1",
    "networkx==2.6.2",
    "tqdm==4.61.2",
    "joblib==1.0.1",
    "scikit-learn==0.24.2"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mikeriess/synbps"
Issues = "https://github.com/mikeriess/synbps/issues"

