[project]
name = "SynBPS"
version = "1.1.1"
authors = [
  { name="Mike Riess", email="mike@riess.no" },
]
description = "Synthetic Business Process Simulation"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.26.2",
    "pandas==2.1.4",
    "scipy>=1.7.0",
    "networkx==2.6.2",
    "tqdm==4.66.3",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_eventlog.py", "test_seed.py"]

[project.urls]
Homepage = "https://github.com/mikeriess/synbps"
Issues = "https://github.com/mikeriess/synbps/issues"

